--- a/src/PyunSoft.AdoExtensions.csproj
+++ b/src/PyunSoft.AdoExtensions.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>net5.0</TargetFramework>
+    <TargetFramework>net6.0</TargetFramework>
     <Description>PyunSoft.AdoExtensions is a Nuget package library that adds a small set of data-retrieval extension methods to System.Data.Common.DbCommand.</Description>
     <Copyright>Copyright (c) 2021 Patrick Gates</Copyright>
     <PackageLicenseFile>LICENSE.txt</PackageLicenseFile>
@@ -9,6 +9,8 @@
     <RepositoryUrl>https://github.com/patrickbgates/PyunSoft.AdoExtensions</RepositoryUrl>
     <RepositoryType>Git</RepositoryType>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+    <GenerateDocumentationFile>True</GenerateDocumentationFile>
+    <Version>1.1.0</Version>
   </PropertyGroup>
 
   <ItemGroup>
